workspace-sf/force-app/main/default/objects/Sinistro__c/Sinistro__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar o cadastro dos sinistros das contas</description>
    <label>Sinistro</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sinistros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>