workspace-sf/force-app/main/default/objects/Sinistro__c/fields/AnaliseMedica__c.field-meta.xml
<CustomField>
    <fullName>AnaliseMedica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Análise médica?</label>
    <type>Checkbox</type>
</CustomField>