workspace-sf/force-app/main/default/objects/Sinistro__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sinistros</relationshipLabel>
    <relationshipName>Sinistros</relationshipName>
    <type>Lookup</type>
</CustomField>