workspace-sf/force-app/main/default/objects/Sinistro__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Sinistros e benefícios</relationshipLabel>
    <relationshipName>Sinistros</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>