workspace-sf/force-app/main/default/objects/Sinistro__c/fields/Corretor__c.field-meta.xml
<CustomField>
    <fullName>Corretor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corretor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sinistros (Corretor)</relationshipLabel>
    <relationshipName>Corretor</relationshipName>
    <type>Lookup</type>
</CustomField>