workspace-sf/force-app/main/default/objects/Sinistro__c/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <label>CRM</label>
    <type>TextArea</type>
</CustomField>