workspace-sf/force-app/main/default/objects/Sinistro__c/fields/CusteadorSeguro__c.field-meta.xml
<CustomField>
    <fullName>CusteadorSeguro__c</fullName>
    <label>Custeador do seguro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>À esclarecer</fullName>
            </value>
            <value>
                <fullName>Inconclusivo</fullName>
            </value>
            <value>
                <fullName>Outro(s)</fullName>
            </value>
            <value>
                <fullName>Segurado(a)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>