workspace-sf/force-app/main/default/objects/Sinistro__c/fields/DataEntradaDocumentos__c.field-meta.xml
<CustomField>
    <fullName>DataEntradaDocumentos__c</fullName>
    <label>Data da entrada de documentos</label>
    <type>Date</type>
</CustomField>