workspace-sf/force-app/main/default/objects/Sinistro__c/fields/DataHoraAbertura__c.field-meta.xml
<CustomField>
    <fullName>DataHoraAbertura__c</fullName>
    <label>Data/Hora de abertura</label>
    <type>DateTime</type>
</CustomField>