workspace-sf/force-app/main/default/objects/Sinistro__c/fields/DataOcorrencia__c.field-meta.xml
<CustomField>
    <fullName>DataOcorrencia__c</fullName>
    <label>Data da ocorrência</label>
    <type>Date</type>
</CustomField>