workspace-sf/force-app/main/default/objects/Sinistro__c/fields/DataProgramadaPagamento__c.field-meta.xml
<CustomField>
    <fullName>DataProgramadaPagamento__c</fullName>
    <label>Data programada do pagamento</label>
    <type>Date</type>
</CustomField>