workspace-sf/force-app/main/default/objects/Sinistro__c/fields/DescricaoEvento__c.field-meta.xml
<CustomField>
    <fullName>DescricaoEvento__c</fullName>
    <label>Descrição do Evento</label>
    <type>TextArea</type>
</CustomField>