workspace-sf/force-app/main/default/objects/Sinistro__c/fields/EmailCorretor__c.field-meta.xml
<CustomField>
    <fullName>EmailCorretor__c</fullName>
    <label>E-mail do Corretor</label>
    <type>Email</type>
</CustomField>