workspace-sf/force-app/main/default/objects/Sinistro__c/fields/Fase__c.field-meta.xml
<CustomField>
    <fullName>Fase__c</fullName>
    <label>Fase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avisado</fullName>
                <default>true</default>
                <label>Avisado</label>
            </value>
            <value>
                <fullName>Em Regulação</fullName>
            </value>
            <value>
                <fullName>Liquidado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>