workspace-sf/force-app/main/default/objects/Sinistro__c/fields/Garantia__c.field-meta.xml
<CustomField>
    <fullName>Garantia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantia</label>
    <referenceTo>Garantia__c</referenceTo>
    <relationshipLabel>Sinistros</relationshipLabel>
    <relationshipName>Sinistros</relationshipName>
    <type>Lookup</type>
</CustomField>