workspace-sf/force-app/main/default/objects/Sinistro__c/fields/GarantiaContrato__c.field-meta.xml
<CustomField>
    <fullName>GarantiaContrato__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Garantia do contrato</label>
    <referenceTo>GarantiaContrato__c</referenceTo>
    <relationshipLabel>Sinistros</relationshipLabel>
    <relationshipName>Sinistros</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>