workspace-sf/force-app/main/default/objects/Sinistro__c/fields/NomeMedico__c.field-meta.xml
<CustomField>
    <fullName>NomeMedico__c</fullName>
    <label>Nome do médico</label>
    <type>TextArea</type>
</CustomField>