workspace-sf/force-app/main/default/objects/Sinistro__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <description>Campo necessário para compor o campo número do sinistro</description>
    <displayFormat>{000000}</displayFormat>
    <label>Número</label>
    <type>AutoNumber</type>
</CustomField>