workspace-sf/force-app/main/default/objects/Sinistro__c/fields/NumeroSinistro__c.field-meta.xml
<CustomField>
    <fullName>NumeroSinistro__c</fullName>
    <label>Número do Sinistro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>