workspace-sf/force-app/main/default/objects/Sinistro__c/fields/OrigemDocumentos__c.field-meta.xml
<CustomField>
    <fullName>OrigemDocumentos__c</fullName>
    <label>Origem de documentos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portal Corretor</fullName>
            </value>
            <value>
                <fullName>Portal do Cliente</fullName>
            </value>
            <value>
                <fullName>Protocolo Manual</fullName>
            </value>
            <value>
                <fullName>Sucursal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>