workspace-sf/force-app/main/default/objects/Sinistro__c/fields/Parceiro__c.field-meta.xml
<CustomField>
    <fullName>Parceiro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parceiro</label>
    <referenceTo>Parceiro__c</referenceTo>
    <relationshipLabel>Sinistros</relationshipLabel>
    <relationshipName>Sinistros</relationshipName>
    <type>Lookup</type>
</CustomField>