workspace-sf/force-app/main/default/objects/Sinistro__c/fields/ParecerLiquidacao__c.field-meta.xml
<CustomField>
    <fullName>ParecerLiquidacao__c</fullName>
    <label>Parecer da liquidação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>