workspace-sf/force-app/main/default/objects/Sinistro__c/fields/ParecerMedico__c.field-meta.xml
<CustomField>
    <fullName>ParecerMedico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parecer médico?</label>
    <type>Checkbox</type>
</CustomField>