workspace-sf/force-app/main/default/objects/Sinistro__c/fields/PeriodoAfastamento__c.field-meta.xml
<CustomField>
    <fullName>PeriodoAfastamento__c</fullName>
    <inlineHelpText>Em dias</inlineHelpText>
    <label>Período de afastamento</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>