workspace-sf/force-app/main/default/objects/Sinistro__c/fields/PossuiAcaoJudicial__c.field-meta.xml
<CustomField>
    <fullName>PossuiAcaoJudicial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possui ação judicial?</label>
    <type>Checkbox</type>
</CustomField>