workspace-sf/force-app/main/default/objects/Sinistro__c/fields/ProfissaoDeclaradaMesmaApurada__c.field-meta.xml
<CustomField>
    <fullName>ProfissaoDeclaradaMesmaApurada__c</fullName>
    <inlineHelpText>Profissão declarada é a mesma apurada no sinistro?</inlineHelpText>
    <label>Profissão declarada é a mesma apurada?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>À esclarecer</fullName>
            </value>
            <value>
                <fullName>Inconclusivo</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Sim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>