workspace-sf/force-app/main/default/objects/Sinistro__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Analise</fullName>
                <label>Em Análise</label>
            </value>
            <value>
                <fullName>Com Pendencias</fullName>
                <label>Com Pendências</label>
            </value>
            <value>
                <fullName>Condicionado</fullName>
            </value>
            <value>
                <fullName>Pago</fullName>
            </value>
            <value>
                <fullName>Recusado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>