workspace-sf/force-app/main/default/objects/Sinistro__c/fields/TipoPagamento__c.field-meta.xml
<CustomField>
    <fullName>TipoPagamento__c</fullName>
    <label>Tipo de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque nominal</fullName>
            </value>
            <value>
                <fullName>Transferência bancária</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>