workspace-sf/force-app/main/default/objects/Sinistro__c/fields/ValorIndenizado__c.field-meta.xml
<CustomField>
    <fullName>ValorIndenizado__c</fullName>
    <label>Valor indenizado</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>