workspace-sf/force-app/main/default/objects/Sinistro__c/fields/ValorIRB__c.field-meta.xml
<CustomField>
    <fullName>ValorIRB__c</fullName>
    <label>Valor IRB</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>