workspace-sf/force-app/main/default/objects/Sinistro__c/fields/Vitima__c.field-meta.xml
<CustomField>
    <fullName>Vitima__c</fullName>
    <label>Vítima</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cônjuge</fullName>
            </value>
            <value>
                <fullName>Filhos</fullName>
            </value>
            <value>
                <fullName>Pais</fullName>
            </value>
            <value>
                <fullName>Segurado</fullName>
            </value>
            <value>
                <fullName>Sogros</fullName>
            </value>
            <value>
                <fullName>Filho</fullName>
                <isActive>false</isActive>
                <label>Filho</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>