workspace-sf/force-app/main/default/objects/Sinistro__c/validationRules/ValidarParecerMedicoPreenchido.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarParecerMedicoPreenchido</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR( CRM__c  = null, NomeMedico__c = null) , ParecerMedico__c = true)</errorConditionFormula>
    <errorDisplayField>ParecerMedico__c</errorDisplayField>
    <errorMessage>Os campos CRM e Nome do médico devem ser preenchidos.</errorMessage>
</ValidationRule>