workspace-sf/force-app/main/default/objects/Sinistro__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Conta__c</columns>
    <columns>Contrato__c</columns>
    <columns>DataOcorrencia__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos os sinistros</label>
</ListView>