workspace-sf/force-app/main/default/objects/Sinistro__c/listViews/AtendimentoSinistros_Sinistro.listView-meta.xml
<ListView>
    <fullName>AtendimentoSinistros_Sinistro</fullName>
    <filterScope>Queue</filterScope>
    <label>Atendimento de sinistros</label>
    <queue>AtendimentoSinistros</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>